# it-bank-questions

./: .env.development  .env.example  .env.test  .gitignore  learning-platform-architecture.md  project-summary-deployment.md  pyproject.toml  structure.txt
application/: config.py
application/dto/: __init__.py  common.py
application/dto/request/: __init__.py  auth_dto.py  content_dto.py  learning_dto.py
application/dto/response/: __init__.py  analytics_dto.py  content_dto.py  progress_dto.py  question_dto.py  session_dto.py  user_dto.py
application/mappers/: __init__.py  base.py  content_mapper.py  progress_mapper.py  question_mapper.py  session_mapper.py  user_mapper.py
application/services/: __init__.py  cache_service.py  email_service.py  event_bus.py  notification_service.py
application/use_cases/analytics/: get_user_analytics.py
application/use_cases/auth/: __init__.py  authenticate_user.py  refresh_token.py  register_user.py  reset_password.py  verify_email.py
application/use_cases/content/: __init__.py  (+3 more)
core/: __init__.py  asgi.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py
domain/: __init__.py  exceptions.py
domain/entities/: __init__.py  base.py  content_hierarchy.py  learning_event.py  learning_session.py  progress.py  question.py  spaced_repetition.py  user.py
domain/events/: __init__.py  base.py  learning_events.py  user_events.py
domain/repositories/: __init__.py  base.py  content_repository.py  event_repository.py  progress_repository.py  question_repository.py  session_repository.py  spaced_repetition_repository.py  user_repository.py
domain/services/: __init__.py  achievement_service.py  analytics_service.py  content_hierarchy_service.py  learning_path_service.py  spaced_repetition_service.py
domain/value_objects/: __init__.py  card_state.py  content_hierarchy.py  difficulty_level.py  learning_metrics.py  question_type.py  user_types.py
infrastructure/: container.py
infrastructure/cache/: __init__.py  cache_manager.py  memory_cache.py  redis_cache.py
infrastructure/celery/: __init__.py  apps.py  celery_app.py
infrastructure/importers/: __init__.py  base_importer.py  json_importer.py
infrastructure/persistence/: apps.py
infrastructure/services/: __init__.py  email_service.py  event_bus.py
interfaces/api/: dependencies.py  exception_handlers.py  main.py  websocket.py
interfaces/cli/: apps.py  dependencies.py
interfaces/rest/: apps.py  auth_helpers.py  exceptions.py  serializers.py  urls.py  views.py
(+50 files in other folders)
