[tool.poetry]
name = "learning-platform-backend"
version = "0.1.0"
description = "Clean Architecture + DDD backend with FastAPI gateway and Django/DRF app"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
django = "^5.2.5"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.7.0"
django-environ = "^0.12.0"
django-extensions = "^4.1"
django-filter = "^25.1"
django-redis = "^6.0.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.20"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
psycopg2-binary = "^2.9.10"
mysqlclient = "^2.2.7"
dj-database-url = "^3.0.1"
redis = {extras = ["hiredis"], version = ">5,<6,!=4.5.5" }
celery = {extras = ["redis"], version = ">=5.3,<6.0" }
hiredis = "^3.2.1"
cachetools = "^6.1.0"
kombu = "^5.5.4"
flower = "^2.0.1"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
bcrypt = "^4.3.0"
dependency-injector = "^4.48.1"
django-ses = "^4.4.0"
boto3 = "^1.40.16"
django-storages = "^1.14.6"
pillow = "^11.3.0"
sentry-sdk = "^2.35.0"
prometheus-client = "^0.22.1"
ipython = "^9.4.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pylint = "^3.3.8"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
factory-boy = "^3.3.3"
faker = "^37.5.3"
django-debug-toolbar = "^6.0.0"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
httpx = "^0.28.1"
tenacity = "^9.1.2"
python-slugify = "^8.0.4"
django-celery-beat = "^2.8.1"
django-celery-results = "^2.6.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.5.1"
itsdangerous = "^2.2.0"
channels = "^4.3.1"
markdown = "^3.8.2"


[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
